loadbalance默认为轮循策略，debug具体代码

--- a/README.adoc
+++ b/README.adoc
@@ -15,6 +15,7 @@ https://docs.spring.io/spring-cloud/docs/
 - 2. `Eureka-Service`:eureka注册中心
 
 - 3. `Feign-Consumer`:feign客户端，引入feign依赖，进行RPC调用
+    需要引入 `spring-boot-starter-web`依赖，不加入main方法运行结束，程序结束
 
 
 ## 3.feign历史
@@ -38,6 +39,30 @@ https://juejin.cn/post/7097124836496900127
     可以在每个Feign接口类上指定不同的contextId来解决
 
 ## 5.源码解读
+
+
+
+### 1. loadbalancer默认为轮训策略，代码实现 `AbstractServerPredicate`的 `incrementAndGetModulo()`方法
+
+入口：EnableFeignClients注解Import的类 `FeignClientsRegistrar`
+
+1. 每个 `@FeignClient`标记的接口类都会生成对应的 `FeignClientFactoryBean`对象
+2. FactoryBean是一个工厂bean，通过 `getObject()`方法生成对应的对象
+3. url配置为空，则通过name配置的服务名进行轮训 `loadBalance()`,获取对应的代理对象
+4. 最后会走到 `ReflectiveFeign`的 `newInstance()`创建代理对象
+5. `FeignInvocationHandler`是真正执行的子类，当接到请求时，调用其 `invoke()`方法，创建代理对象
+6. `SynchronousMethodHandler`的 `executeAndDecode()`
+7. `client.execute(request, options)`继续执行，到类 `LoadBalancerFeignClient` `executeWithLoadBalancer()`
+8. `command.submit()`的`this.selectServer()`；`loadBalancerContext.getServerFromLoadBalancer()`;`lb.chooseServer(loadBalancerKey)`
+9. `BaseLoadBalancer`的`chooseServer()`;`rule.choose(key)`
+10. `PredicateBasedRule`的`chooseRoundRobinAfterFiltering()`
+11. 最终`AbstractServerPredicate`的`incrementAndGetModulo()`
+
+
+
+
+
+
 
 
 
